<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_holo_light"
    android:orientation="horizontal"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    tools:context="com.example.homework1.HomepageActivity" >

    <TextView
        android:id="@+id/txt_welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:text="@string/Welcome"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="20sp" />

    <Button
        android:id="@+id/selectphoto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/viewImage"
        android:layout_below="@+id/viewImage"
        android:layout_marginLeft="-5dp"
        android:text="@string/selectphoto" />

    <TextView
        android:id="@+id/emailview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/viewImage"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:layout_toRightOf="@id/selectphoto"
        android:text="@string/emailview" />

    <ImageView
        android:id="@+id/viewImage"
        android:layout_width="117dp"
        android:layout_height="116dp"
        android:layout_alignLeft="@+id/txt_welcome"
        android:layout_below="@+id/txt_welcome"
        android:contentDescription="@string/image" />

    <ListView
        android:id="@+id/links_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="false"
        android:layout_alignRight="@+id/textView1"
        android:layout_below="@+id/link_input"
        android:layout_marginBottom="20dp" >
    </ListView>

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/emailview"
        android:layout_alignTop="@+id/viewImage"
        android:layout_toRightOf="@id/selectphoto"
        android:text="@string/textView"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Button
        android:id="@+id/saveprofile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/emailview"
        android:layout_below="@+id/emailview"
        android:layout_toRightOf="@id/viewImage"
        android:gravity="center_vertical"
        android:minHeight="40dp"
        android:text="@string/saveprofile"
        android:textSize="15sp" />

    <Button
        android:id="@+id/submit_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/link_input"
        android:layout_alignParentRight="true"
        android:layout_toRightOf="@id/link_input"
        android:onClick="createLink"
        android:padding="0dp"
        android:text="@string/submit_button" />

    <EditText
        android:id="@+id/link_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/selectphoto"
        android:ems="10"
        android:hint="@string/input_hint"
        android:inputType="text" >
        <requestFocus />
    </EditText>

</RelativeLayout>