<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical" 
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/background_holo_light"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    tools:context="com.example.homework1.ChangePasswordActivity">

    <EditText
        android:id="@+id/old_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/new_password"
        android:layout_below="@+id/new_password"
        android:layout_marginTop="19dp"
        android:ems="10"
        android:hint="@string/old_password"
        android:inputType="textPassword"
        android:typeface="normal" />

    <Button
        android:id="@+id/button1"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/old_password"
        android:layout_below="@+id/old_password"
        android:layout_marginTop="98dp"
        android:text="@string/cancel" />

    <Button
        android:id="@+id/button2"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/button1"
        android:layout_alignBottom="@+id/button1"
        android:layout_alignRight="@+id/old_password"
        android:text="@string/ok" />

    <EditText
        android:id="@+id/new_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="34dp"
        android:ems="10"
        android:hint="@string/new_password"
        android:inputType="textPassword"
        android:typeface="normal" >

        <requestFocus />
    </EditText>

</RelativeLayout>
